--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 
 h1{
 color: rgb(255,255,255);
-
 background-color: rgb(0,0,0);
 }
 
@@ -13,9 +12,8 @@ body{
 
 text-align: center;
 background-image: linear-gradient(rgb(128, 218, 249), rgb(82, 195, 203));
-
-min-width: 1000%;
-min-height: 1000%;
+min-width: 100%;
+min-height: 100%;
 
 }
 </style>
@@ -30,7 +28,7 @@ min-height: 1000%;
 <p> I 𝓈𝓉𝒶𝓇𝓉𝑒𝒹 𝓅𝓁𝒶𝓎𝒾𝓃𝑔 𝓉𝒽𝑒 𝓅𝒾𝒶𝓃𝑜 𝒶𝓉 𝓉𝒽𝑒 𝒶𝑔𝑒 𝑜𝒻 𝟨 𝒶𝓃𝒹 𝐼 𝒽𝒶𝓋𝑒 𝓁𝑜𝓋𝑒𝒹 𝒾𝓉 𝑒𝓋𝑒𝓇 𝓈𝒾𝓃𝒸𝑒!
   𝐼 𝒻𝑒𝑒𝓁 <em> 𝒽𝒶𝓅𝓅𝓎 </em> 𝒶𝓃d <em> 𝓇𝑒𝓁𝒶𝓍𝑒𝒹 </em> 𝓌𝒽𝑒𝓃 𝐼 𝒶𝓂 𝓅𝓁𝒶𝓎𝒾𝓃𝑔 𝓉𝒽𝑒 𝓅𝒾𝒶𝓃𝑜. 𝒮𝓉𝓊𝒹𝒾𝑒𝓈 𝓈𝒽𝑜𝓌 𝓉𝒽𝒶𝓉 𝓉𝒾𝓂𝑒
 𝓈𝓅𝑒𝓃𝓉 𝑜𝓃 𝓉𝒽𝑒 𝓅𝒾𝒶𝓃𝑜 𝒾𝓂𝓅𝓇𝑜𝓋𝑒𝓈 𝓂𝑒𝓃𝓉𝒶𝓁 𝒽𝑒𝒶𝓁𝓉𝒽, 𝓈𝒽𝒶𝓇𝓅𝑒𝓃𝓈 𝒻𝒾𝓃𝑒 𝓂𝑜𝓉𝑜𝓇 𝓈𝓀𝒾𝓁𝓁𝓈, 𝒾𝓂𝓅𝓇𝑜𝓋𝑒𝓈 𝒶𝑔𝒾𝓁𝒾𝓉𝓎 
-𝒾𝓃 𝓉𝒽𝑒 𝒽𝒶𝓃𝒹𝓈 𝒶𝓃𝒹 𝒽𝒶𝓃𝒹-𝑒𝓎𝑒 𝒸𝑜𝑜𝓇𝒹𝒾𝓃𝒶𝓉𝒾𝑜𝓃. <p>
+𝒾𝓃 𝓉𝒽𝑒 𝒽𝒶𝓃𝒹𝓈 𝒶𝓃𝒹 𝒽𝒶𝓃𝒹-𝑒𝓎𝑒 𝒸𝑜𝑜𝓇𝒹𝒾𝓃𝒶𝓉𝒾𝑜𝓃. </p>
 
 </body>
 </html>
