--- a/index.html
+++ b/index.html
@@ -24,5 +24,14 @@
   
  <img src="https://media.istockphoto.com/id/1129332575/photo/favorite-classical-music-close-up-view-of-gentle-female-hands-playing-a-melody-on-piano-while.jpg?s=612x612&w=0&k=20&c=GJEJTdGtmgHpKjDL7BE9KO2diJNQ4lPinInWiJAOSCQ=" width="700">
 
+  
+  <h1> 𝓕𝓪𝓬𝓽𝓼 𝓪𝓫𝓸𝓾𝓽 𝓽𝓱𝓮 𝓹𝓪𝓲𝓷𝓸 </h1>
+  <p> 
+  1) The Piano is Classified as a String and Percussion Instrument. <br>
+  2) The First Piano Was Made in Italy in 1709. <br>
+  3) Pianos Used to Have Ivory Keys. <br>
+  4) Each String in the Piano Holds Lots of Tension. <br>
+  5) Not All Pianos Have the Same Number of Keys. </p>
+  
 </body>
 </html>
