--- a/index.html
+++ b/index.html
@@ -33,5 +33,7 @@
   4) Each String in the Piano Holds Lots of Tension. <br>
   5) Not All Pianos Have the Same Number of Keys. </p>
   
+  <img src="<iframe src="https://giphy.com/embed/ml7uPJvfhPgqjknxvq" width="445" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/colorinmypiano-piano-keys-keyboard-ml7uPJvfhPgqjknxvq">via GIPHY</a></p>" width="500">
+  
 </body>
 </html>
