--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
    𝒮𝓉𝓊𝒹𝒾𝑒𝓈 𝓈𝒽𝑜𝓌 𝓉𝒽𝒶𝓉 𝓉𝒾𝓂𝑒 𝓈𝓅𝑒𝓃𝓉 𝑜𝓃 𝓉𝒽𝑒 𝓅𝒾𝒶𝓃𝑜 𝒾𝓂𝓅𝓇𝑜𝓋𝑒𝓈 𝓂𝑒𝓃𝓉𝒶𝓁 𝒽𝑒𝒶𝓁𝓉𝒽, 𝓈𝒽𝒶𝓇𝓅𝑒𝓃𝓈 𝒻𝒾𝓃𝑒 𝓂𝑜𝓉𝑜𝓇 𝓈𝓀𝒾𝓁𝓁𝓈, 𝒾𝓂𝓅𝓇𝑜𝓋𝑒𝓈 𝒶𝑔𝒾𝓁𝒾𝓉𝓎 𝒾𝓃 𝓉𝒽𝑒 𝒽𝒶𝓃𝒹𝓈 
    𝒶𝓃𝒹 𝒽𝒶𝓃𝒹-𝑒𝓎𝑒 𝒸𝑜𝑜𝓇𝒹𝒾𝓃𝒶𝓉𝒾𝑜𝓃. </p>
   
- <img src="https://media.istockphoto.com/id/1129332575/photo/favorite-classical-music-close-up-view-of-gentle-female-hands-playing-a-melody-on-piano-while.jpg?s=612x612&w=0&k=20&c=GJEJTdGtmgHpKjDL7BE9KO2diJNQ4lPinInWiJAOSCQ=" width="700">
+ 
 
-  
-  <h1> 𝓕𝓪𝓬𝓽𝓼 𝓪𝓫𝓸𝓾𝓽 𝓽𝓱𝓮 𝓹𝓪𝓲𝓷𝓸 </h1>
+  <img src="https://media.istockphoto.com/id/1129332575/photo/favorite-classical-music-close-up-view-of-gentle-female-hands-playing-a-melody-on-piano-while.jpg?s=612x612&w=0&k=20&c=GJEJTdGtmgHpKjDL7BE9KO2diJNQ4lPinInWiJAOSCQ=" width="700">
+  <h1> 𝓕𝓪𝓬𝓽𝓼 𝓪𝓫𝓸𝓾𝓽 𝓽𝓱𝓮 𝓹𝓲𝓪𝓷𝓸 </h1>
   <p> 
   1) The Piano is Classified as a String and Percussion Instrument. <br>
   2) The First Piano Was Made in Italy in 1709. <br>
