--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   4) Each String in the Piano Holds Lots of Tension. <br>
   5) Not All Pianos Have the Same Number of Keys. </p>
   
-   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRDF8_Tob0sVY5lUt_BrgyCMBXxIMhvchS36w&usqp=CAU" width="500">
+   <img src="https://i.scdn.co/image/ab67616d0000b2731127e390612f88ced49dca06" width="500">
   
 </body>
 </html>
