--- a/index.html
+++ b/index.html
@@ -35,5 +35,16 @@
   
    <img src="https://i.scdn.co/image/ab67616d0000b2731127e390612f88ced49dca06" width="500">
   
+   <h1> 𝓕𝓪𝓬𝓽𝓼 𝓪𝓫𝓸𝓾𝓽 𝓑𝓮𝓮𝓽𝓱𝓸𝓿𝓮𝓷 </h1>
+  <p> Ludwig van Beethoven was a German composer and pianist. 
+  
+  1) The Piano is Classified as a String and Percussion Instrument. <br>
+  2) The First Piano Was Made in Italy in 1709. <br>
+  3) Pianos Used to Have Ivory Keys. <br>
+  4) Each String in the Piano Holds Lots of Tension. <br>
+  5) Not All Pianos Have the Same Number of Keys. </p>
+  
+  
+  
 </body>
 </html>
